# cthugha-esp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml  main.yml
main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  audio_capture.h  boom_box.c  boom_box.h  cthugha.h  display.c  display.h  flames.c  idf_component.yml  main.c  palettes.c  palettes.h  touch_input.c  touch_input.h  translate.c  waves.c
