idf_component_register(
    SRCS
        "main.c"
        "flames.c"
        "waves.c"
        "palettes.c"
        "translate.c"
        "display.c"
        "audio_capture.c"
        "touch_input.c"
        "boom_box.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_lcd
        esp_timer
        freertos
        esp_hw_support
)
